--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -7,20 +7,34 @@
 
     "browser_action": {
         "default_icon": "Web-icon.png",
-        "default_popup": "popup.html",
+        // "default_popup": "popup.html",
         "default_title": "Get this page's neighbors!"
     },
     "permissions": [
         "activeTab",
         // "tabs",
         "http://localhost:1337/",
-        "storage",
-        //for modal
+        "storage"
     ],
-    // "content_scripts" : [
-    // {
-    //     "js": ["jquery-1.8.3.js", "jquery-ui.js", "modal.js"],
-    //     "css": [ "jquery-ui.css" ]
-    // }
-],
+    "content_scripts" : [
+        {
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "jquery-1.12.0.min.js",
+                "jquery-ui.min.js",
+                "d3.min.js",
+                "content.js"
+            ],
+            "css": [
+                "d3.css",
+                "jquery-ui.min.css"
+                // "jquery-ui.theme.min.css"
+            ]
+        }
+    ],
+    "background": {
+        "scripts": ["background.js"]
+    }
 }
