--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -25,6 +25,8 @@
                 "jquery-1.12.0.min.js",
                 "jquery-ui.min.js",
                 "d3.min.js",
+                "d3.layout.cloud.js",
+                "tooltip.js",
                 "content.js"
             ],
             "css": [
